force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>