force-app/main/default/objects/Action__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge</fullName>
            </value>
            <value>
                <fullName>Discharge</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Curtail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>