force-app/main/default/objects/Action__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision</label>
    <referenceTo>Decision__c</referenceTo>
    <relationshipLabel>Action</relationshipLabel>
    <relationshipName>Action</relationshipName>
    <type>Lookup</type>
</CustomField>