force-app/main/default/objects/Action__c/fields/Quantity_MW__c.field-meta.xml
<CustomField>
    <fullName>Quantity_MW__c</fullName>
    <label>Quantity (MW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>